# equis

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: game.rs  lib.rs
worker/: worker.js
