[package]
name = "equis"
edition = "2018"
version = "0.1.0"
license = "CC0-1.0"
description = "A Battlesnake called equis"
authors = ["Jonathan Reyes <j@jreyes.org>"]
repository = "https://github.com/jreyes33/equis"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"

[dependencies.web-sys]
version = "0.3.51"
features = ["Request"]
